--- a/expressjs/package.json
+++ b/expressjs/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "moment-timezone": "^0.5.45",
     "mongoose": "^8.3.2",
