--- a/expressjs/package.json
+++ b/expressjs/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "file-extension": "^4.0.5",
     "firebase-admin": "^12.1.0",
     "firebase-functions": "^5.0.0",
     "moment-timezone": "^0.5.45",
