--- a/expressjs/package.json
+++ b/expressjs/package.json
@@ -17,7 +17,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.6.8",
     "body-parser": "^1.20.2",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "file-extension": "^4.0.5",
