successfully display text messages on web
need to modularize code and display files too

--- a/expressjs/package.json
+++ b/expressjs/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:dev": "nodemon ./src/index.js",
-    "start": "node .src/index.js",
+    "start": "node ./src/index.js",
     "deploy": "firebase deploy --only functions:LineBotYdm",
     "deploy:auto": "firebase emulators:start",
     "log": "firebase functions:log --only functions:LineBotYdm"
@@ -22,6 +22,7 @@
     "body-parser": "^1.20.2",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
     "file-extension": "^4.0.5",
     "firebase-admin": "^12.1.0",
