--- a/expressjs/package.json
+++ b/expressjs/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google/generative-ai": "^0.11.1",
     "axios": "^1.6.8",
     "body-parser": "^1.20.2",
     "crypto": "^1.0.1",
