--- a/expressjs/package.json
+++ b/expressjs/package.json
@@ -21,6 +21,7 @@
     "@google/generative-ai": "^0.11.1",
     "axios": "^1.6.8",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
